# nimble-aligner

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  create_release_tag.yml  release.yml  rust.yml
src/: align.rs  cli.yml  filter.rs  lib.rs  main.rs  output_header.rs  parse_bam.rs  parse_fastq.rs  reference_library.rs  score.rs  utils.rs
src/filter/: align.rs  mod.rs  report.rs
src/parse/: bam.rs  fastq.rs  mod.rs  sorted_bam_reader.rs
src/process/: bam.rs  fastq.rs
tests/: bam-pipeline.rs  bam_pipeline_run.rs  basic-cases.rs  mismatch.rs  reference-library-test.rs  strandedness_orientation.rs  utils.rs
tests/test-sequences/libraries/: basic-rev.fasta  basic-rev.json  basic.fasta  basic.json  mismatch.json  real-data.json  reference-library-broken-format.json  reference-library-correct.json  reference-library-missing-fields.json  reference-library-mixed-case-rna.json  reference-library-no-rna-bases.json  reference-library-rna.json  reference-library-test.json  reference-library-types-broken.json  strandedness.json
tests/test-sequences/libraries/parse-error-libs/: discard_multiple_matches_error.json  group_on_error.json  score_threshold_error.json
tests/test-sequences/reads/: UR_reversecomp.sam  basic.fastq  fastq_invalid_data.fastq  fastq_pipeline_test_r1.fastq  fastq_pipeline_test_r2.fastq  mismatch.fastq  real-data.bam  sample.bam  sample_no_r1.bam  strandedness_FR.sam  strandedness_FU.sam  strandedness_RF.sam  strandedness_RU.sam  strandedness_UF.sam  strandedness_UR.sam  test_unstranded_filter.sam
