[package]
name = "nimble"
version = "0.1.0"
authors = ["Sebastian Benjamin <benjamse@ohsu.edu>"]
edition = "2018"

[lib]
name = "nimble"
path = "src/lib.rs"

[[bin]]
name = "nimble"
path = "src/bin/main.rs"

[dependencies]
bio = "0.31.0"
clap = { version = "2.33.1", features = ["yaml"] }
csv = "1.1.3"
debruijn = { git = "https://github.com/10XGenomics/rust-debruijn" }
debruijn_mapping = { git = "https://github.com/10XGenomics/rust-pseudoaligner" }
serde_json = "1.0.56"
array_tool = "1.0.3"
unwrap = "1.2.1"
niffler = "2.2.0"
rust-htslib = "0.38.2"
flate2 = "1.0.22"
