[package]
name = "nimble"
version = "0.1.0"
authors = ["Sebastian Benjamin <benjamse@ohsu.edu>"]
edition = "2021"

[lib]
name = "nimble"
path = "src/lib.rs"

[[bin]]
name = "nimble"
path = "src/bin/main.rs"

[dev-dependencies]
tempfile = "3.10.1"

[dependencies]
bio = "*"
clap = { version = "2.33.1", features = ["yaml"] }
csv = "1.1.3"
debruijn = { git = "https://github.com/10XGenomics/rust-debruijn" }
debruijn_mapping = { git = "https://github.com/hextraza/rust-pseudoaligner" }
serde_json = "1.0.56"
array_tool = "1.0.3"
unwrap = "1.2.1"
niffler = "2.2.0"
rust-htslib = "0.40.2"
flate2 = "1.0.22"
lexical-sort = "0.3.1"
rayon = "1.7.0"
rand = "0.8.5"
tikv-jemallocator = "0.5.4"

